Created HTML calculator buttons
For digits, operations, display, and clear

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="container">
+        <div id="display">
+            <div id="result">0123456789</div>
+        </div>
+        <div id="operators">
+            <button id="addition">+</button>
+            <button id="subtraction">-</button>
+            <button id="multiplication">&times</button>
+            <button id="division">&divide</button>
+        </div>
+        <div id="keypad">
+            <button id="clear">C</button>
+            <button id="zero">0</button>
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six">6</button>
+            <button id="seven">7</button>
+            <button id="eight">8</button>
+            <button id="nine">9</button>
+            <button id="decimal">.</button>
+            <button id="equals">=</button>
+        </div>
+    </div>
     
 </body>
 </html>
