Changed display of buttons in HTML

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,33 +8,37 @@
     <link rel="stylesheet" href="stylesheet.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
     <div id="container">
         <div id="display">
             <div id="result">0123456789</div>
         </div>
-        <div id="operators">
-            <button id="addition">+</button>
-            <button id="subtraction">-</button>
-            <button id="multiplication">&times</button>
-            <button id="division">&divide</button>
-        </div>
-        <div id="keypad">
-            <button id="clear">C</button>
-            <button id="zero">0</button>
-            <button id="one">1</button>
-            <button id="two">2</button>
-            <button id="three">3</button>
-            <button id="four">4</button>
-            <button id="five">5</button>
-            <button id="six">6</button>
-            <button id="seven">7</button>
-            <button id="eight">8</button>
-            <button id="nine">9</button>
-            <button id="decimal">.</button>
-            <button id="equals">=</button>
+        <div id="input">
+            <div id="keypad">
+                <button id="clear" class="number">C</button>
+                <button id="zero" class="number">0</button>
+                <button id="one" class="number">1</button>
+                <button id="two" class="number">2</button>
+                <button id="three" class="number">3</button>
+                <button id="four" class="number">4</button>
+                <button id="five" class="number">5</button>
+                <button id="six" class="number">6</button>
+                <button id="seven" class="number">7</button>
+                <button id="eight" class="number">8</button>
+                <button id="nine" class="number">9</button>
+                <button id="decimal" class="number">.</button>
+            </div>
+            <div id="operators">
+                <button id="addition" class="operator">+</button>
+                <button id="subtraction" class="operator">-</button>
+                <button id="multiplication" class="operator">&times</button>
+                <button id="division" class="operator">&divide</button>
+                <button id="equals" class="operator">=</button>
+            </div>
         </div>
     </div>
-    
+
 </body>
+
 </html>
