Created function that extracts data about elements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
         <div id="display">
-            <div id="result">0123456789</div>
+            <div id="result">0</div>
         </div>
         <div id="input">
             <div id="keypad">
